add route for home page and add sign-up page

--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -37,7 +37,7 @@
             <p>Enter your details <br> and start your journey with us</p>
         </div>
         <div>
-            <button class="btn-2">SIGN UP</button>
+           <a href="/sign-up"><button class="btn-2">SIGN UP</button></a>
         </div>
     </section>
 
