add navigation bar

--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -13,7 +13,7 @@
         <div class="login-form-div">
             <label class="option-text lgray-color"> or use your email account :</label>
             <div  class="lgray-color input-bar-container">
-                <i class="far fa-envelope"></i>
+                <i class="fas fa-envelope"></i>
                 <input type="email" name="email" class="input-bar" placeholder="Email">
             </div>
             <div class="lgray-color input-bar-container">
