--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/layout.css">
 </head>
 <body>
+    <%- include("_header.ejs"); %>
     <%- body %>
     <%- script %>
 </body>
