add notifications and update nav bar

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,15 @@
 <link rel="stylesheet" href="/css/header.css">
 <nav>
-    <a href="/"> Home</a>
+    <%if(locals.user){ %>  
+        <a href="/"> Home</a>
+        <div class="logged-in-btns" >
+            <a><%=user.name%></a>
+            <a href="/users/sign-out">Log-Out</a>
+        </div>   
+    <%}else{%>
+        <!-- <div class="logged-in-btns" > -->
+            <!-- <a href="/sign-up"> Sign Up</a> -->
+            <!-- <a href="/sign-in">Sign In</a> -->
+        <!-- </div>    -->
+    <%}%>
 </nav>
