--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -10,29 +10,31 @@
             </div>
         </div>
 
-        <div class="login-form-div">
-            <label class="option-text lgray-color"> or use your email account to register :</label>
-            <div  class="lgray-color input-bar-container">
-                <i class="fas fa-user-alt"></i>
-                <input type="text" name="name" class="input-bar" placeholder="Name">
-            </div>
-            <div  class="lgray-color input-bar-container">
-                <i class="fas fa-envelope"></i>
-                <input type="email" name="email" class="input-bar" placeholder="Email">
-            </div>
-            <div class="lgray-color input-bar-container">
-                <i class="fas fa-lock"></i>
-                <input type="password" name="password" class="input-bar" placeholder="Password">
-            </div>
-            <div class="lgray-color input-bar-container">
-                <i class="fas fa-lock"></i>
-                <input type="password" name="confirm-password" class="input-bar" placeholder="Confirm Password">
-            </div>
+        <form action="/users/create" method="POST">
+            <div class="login-form-div">
+                <label class="option-text lgray-color"> or use your email account to register :</label>
+                <div  class="lgray-color input-bar-container">
+                    <i class="fas fa-user-alt"></i>
+                    <input type="text" name="name" class="input-bar" placeholder="Name" required>
+                </div>
+                <div  class="lgray-color input-bar-container">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="email" class="input-bar" placeholder="Email" required>
+                </div>
+                <div class="lgray-color input-bar-container">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" name="password" class="input-bar" placeholder="Password" required>
+                </div>
+                <div class="lgray-color input-bar-container">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" name="confirm-password" class="input-bar" placeholder="Confirm Password" required>
+                </div>
 
-            <div class="buttons-container">
-               <button class="btn">SIGN UP</button>
+                <div class="buttons-container">
+                <button class="btn">SIGN UP</button>
+                </div>
             </div>
-        </div>
+        </form>
     </section>
 
     <section class="aside-section">
