--- a/assets/css/sign-in.css
+++ b/assets/css/sign-in.css
@@ -25,6 +25,23 @@ main {
   font-weight: 900;
 }
 
+.main-section .google-btn-container {
+  height: 42px;
+  width: 186px;
+}
+
+.main-section .google-btn-container #google-btn {
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  margin-left: -2px;
+  margin-top: -2px;
+}
+
+.main-section .google-btn-container:hover {
+  cursor: pointer;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
 .main-section .login-form-div {
   padding: 5px;
   display: flex;
