--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -6,8 +6,12 @@
         </div>
 
         <div class="social-login-div">
-            <div id="my-signin2" class="g-signin2">
-            </div>
+            <a href="/users/auth/google">
+                <div class="google-btn-container">
+                    <img id="google-btn" src="/images/btn_google_signin_light_normal_web.png" alt="">
+                </div>
+            </a>
+        </div>
         </div>
         <form action="/users/create-session" method="POST">
             <div class="login-form-div">
@@ -46,18 +50,4 @@
 
 <script src="https://kit.fontawesome.com/c2e4f2d141.js" crossorigin="anonymous"></script>
 
-
-<script>
-    function renderButton() {
-     gapi.signin2.render('my-signin2', {
-       'scope': 'profile email',
-       'width': 240,
-       'height': 50,
-       'longtitle': true,
-       'theme': 'light',
-     });
-   }
-</script>
-
-<script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
