--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -6,8 +6,11 @@
         </div>
 
         <div class="social-login-div">
-            <div id="my-signin2" class="g-signin2">
-            </div>
+            <a href="/users/auth/google">
+                <div class="google-btn-container">
+                    <img id="google-btn" src="/images/btn_google_signin_light_normal_web.png" alt="">
+                </div>
+            </a>
         </div>
 
         <form action="/users/create" method="POST">
@@ -52,17 +55,4 @@
 <script src="https://kit.fontawesome.com/c2e4f2d141.js" crossorigin="anonymous"></script>
 
 
-<script>
-    function renderButton() {
-     gapi.signin2.render('my-signin2', {
-       'scope': 'profile email',
-       'width': 240,
-       'height': 50,
-       'longtitle': true,
-       'theme': 'light',
-     });
-   }
-</script>
-
-<script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
