--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -8,7 +8,8 @@
         <div class="social-login-div">
             <a href="/users/auth/google">
                 <div class="google-btn-container">
-                    <img id="google-btn" src="/images/btn_google_signin_light_normal_web.png" alt="">
+                    <img id="google-btn" src="/images/g-logo.png" alt="">
+                    <p> Sign up with Google </p>
                 </div>
             </a>
         </div>
