--- a/assets/css/sign-up.css
+++ b/assets/css/sign-up.css
@@ -3,9 +3,8 @@ main {
   margin-bottom: 50px;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  opacity: 0.7;
   width: 80%;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   flex-direction: row-reverse;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -26,19 +25,36 @@ main {
   font-weight: 900;
 }
 
-.main-section .google-btn-container {
-  height: 42px;
-  width: 186px;
+.main-section .social-login-div a {
+  text-decoration: none;
 }
 
-.main-section .google-btn-container #google-btn {
-  cursor: pointer;
+.main-section .social-login-div .google-btn-container {
   transition: all 0.3s ease-in-out;
-  margin-left: -2px;
-  margin-top: -2px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.19), 0 2px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 5px;
+  height: 42px;
+  width: 210px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  background-color: #FFFFFF;
 }
 
-.main-section .google-btn-container:hover {
+.main-section .social-login-div .google-btn-container p {
+  margin: 0px;
+  margin-left: 10px;
+  color: gray;
+  text-decoration: none;
+}
+
+.main-section .social-login-div .google-btn-container #google-btn {
+  padding: 8px;
+  height: 25px;
+  width: 25px;
+}
+
+.main-section .social-login-div .google-btn-container:hover {
   cursor: pointer;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
