--- a/assets/scss/sign-up.scss
+++ b/assets/scss/sign-up.scss
@@ -6,9 +6,8 @@ main{
     margin-bottom: 50px;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    opacity: 0.7;
     width: 80%;
-    background-color: white;
+    background-color: rgba(255,255,255,0.5);
     display: flex;
     flex-direction: row-reverse;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -29,21 +28,37 @@ main{
         }
         
     }
-    .google-btn-container{
-        height: 42px;
-        width: 186px;
-        #google-btn{
-            cursor: pointer;
-            transition: all 0.3s ease-in-out;
-            // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-            margin-left: -2px;
-            margin-top: -2px;
+    .social-login-div{
+        a{
+            text-decoration: none;
         }
-        
-    }
-    .google-btn-container:hover{
-        cursor: pointer;
-        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        .google-btn-container{
+            transition: all 0.3s ease-in-out;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.19), 0 2px 6px rgba(0,0,0,0.23);
+            border-radius: 5px;
+            height: 42px;
+            width: 210px;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            background-color:  #FFFFFF;
+            p{
+                margin: 0px;
+                margin-left: 10px;
+                color: gray;
+                text-decoration: none;
+            }
+            #google-btn{
+                padding: 8px;
+                height: 25px;
+                width: 25px;
+            }
+            
+        }
+        .google-btn-container:hover{
+            cursor: pointer;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        }
     }
 
     .login-form-div{
