--- a/assets/css/sign-up.css
+++ b/assets/css/sign-up.css
@@ -102,6 +102,7 @@ main {
 }
 
 .main-section .login-form-div .btn {
+  cursor: pointer;
   background-color: #4DB6AC;
   color: white;
   border-radius: 20px;
@@ -144,6 +145,7 @@ main {
 }
 
 .aside-section .btn-2 {
+  cursor: pointer;
   background-color: #4DB6AC;
   color: white;
   border-radius: 20px;
