--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="forgot-password-div">
-                    <a>Forgot your password?</a>
+                    <a href="/users/forgot-password">Forgot your password?</a>
                 </div>
 
                 <div class="buttons-container">
