--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -20,9 +20,9 @@ main {
 }
 
 .main-section p {
-  margin: 2px;
   font-size: 30px;
   color: #00897B;
+  font-weight: 900;
 }
 
 .main-section .main-heading-div p {
@@ -31,47 +31,7 @@ main {
   font-weight: 900;
 }
 
-.main-section img {
-  align-self: center;
-  border-radius: 50%;
-  width: 250px;
-  height: 250px;
-}
-
-.main-section .user-details {
-  width: 90%;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  align-items: flex-start;
-}
-
-.main-section .user-details form {
-  margin: 20px 0px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.main-section .user-details form h2 {
-  color: #00897B;
-  text-decoration: underline;
-  margin: auto;
-}
-
-.main-section .user-details p {
-  display: block;
-  margin: 10px;
-  margin-left: 0px;
-  font-size: 20px;
-  color: #4DB6AC;
-}
-
-.main-section .user-details p a {
-  color: #00897B;
-}
-
-.main-section .user-details .btn {
+.main-section .enter-email .btn {
   margin: auto;
   background-color: #4DB6AC;
   color: white;
@@ -81,11 +41,11 @@ main {
   outline: none;
 }
 
-.main-section .user-details .btn:hover {
+.main-section .enter-email .btn:hover {
   background-color: #00897B;
 }
 
-.main-section .user-details .input-bar {
+.main-section .enter-email .input-bar {
   margin: 10px;
   padding: 5px 10px;
   outline: none;
@@ -93,10 +53,4 @@ main {
   height: 30px;
   border: 0px;
   background-color: #E0F2F1;
-}
-
-@media screen and (max-width: 1000px) {
-  main {
-    width: 100%;
-  }
 }
