--- a/assets/scss/forgot-password.scss
+++ b/assets/scss/forgot-password.scss
@@ -21,10 +21,11 @@ main{
     flex-direction: column;
     align-items: center;
     p{
-        margin: 2px;
         font-size: 30px;
         color: $primary-color-dark;
+        font-weight: 900;
     }
+    
     .main-heading-div{
         p{
             font-size: 50px;
@@ -32,39 +33,8 @@ main{
             font-weight: 900;
         }
     }
-    img{
-        align-self: center;
-        border-radius: 50%;
-        width: 250px;
-        height: 250px;
-    }
-    .user-details{
-        width: 90%;
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        form{
-            margin: 20px 0px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            h2{
-                color: $primary-color-dark;
-                text-decoration: underline;
-                margin: auto;
-            }
-        }
-        p{
-            display: block;
-            margin: 10px;
-            margin-left: 0px;
-            font-size: 20px;
-            color: $primary-color;
-            a{
-                color: $primary-color-dark;
-            }
-        }
+
+    .enter-email{
         .btn{
             margin: auto;
             background-color: $primary-color;
@@ -86,12 +56,5 @@ main{
             border: 0px;
             background-color: #E0F2F1;
         }
-    }
-}
-
-
-@media screen and (max-width:1000px){
-    main{
-        width: 100%;
     }
 }
