--- a/assets/scss/sign-up.scss
+++ b/assets/scss/sign-up.scss
@@ -97,6 +97,7 @@ main{
             }
         }
         .btn{
+            cursor: pointer;
             background-color: $primary-color;
             color: white;
             border-radius: 20px;
@@ -135,6 +136,7 @@ main{
         }
     }
     .btn-2{
+        cursor: pointer;
         background-color: $primary-color;
         color: white;
         border-radius: 20px;
