--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,12 +9,13 @@
             <%}else{%>
                 <img src="/images/avatar.png" alt="Pic">
             <%}%>
+            <p>Display Name : <%=user.name%></p>
+            <p>Email : <%=user.email%></p>
             <%if(user.auth=="local"){ %> 
                 <div class="user-details">
                     <form action="/users/update?id=<%=user.id%>" method="POST">
                         <h2>Update Basic Details : </h2>
-                        <p>User :</p> <input type="text" name="name" class="input-bar" placeholder="Name" value="<%=user.name%>" required> 
-                        <p>Email : </p> <input type="email" name="email" class="input-bar" placeholder="Email" value="<%=user.email%>" required >  
+                        <p>Display Name :</p> <input type="text" name="name" class="input-bar" placeholder="Name" value="<%=user.name%>" required> 
                         <p>Enter Password : </p> <input type="password" name="password" class="input-bar" placeholder="Password"  required >  
                         <button class="btn">Update</button>
                     </form>
@@ -29,7 +30,7 @@
                 </div>
             <%}else{%>  
                 <div class="main-heading-div">
-                    <p>Logged in With Google can't edit Profile!</p>
+                    <p>Signed up With Google can't edit Profile!</p>
                 </div>
             <%}%>  
         <%}%>  
